# Changelog

## Alpha 005 (Not yet released)

* [ ] Quest mit blutleerem Pferd hinzufügt
* [ ] Bei "Zurück zum Hauptmenü" soll eine Nachfrage erfolgen
* [ ] Autosave (?)
* [ ] Sprachausgabe (?)

## Alpha 004

* Puzzle mit Sprengstoff hinzugefügt
* Tretminen hinzugefügt
* Schwert hinzugefügt
* Tag-Nacht-Zyklus hinzugefügt
* Aktuelle Aufgabe wird jetzt angezeigt im Pausenmenü
* Grafik-Einstellungen feiner einstellbar.
* Intro entfernt
* Maussteuerung entfernt
* Fehler im Handling der Tastatur-Events korrigiert
* Wenn man das Spiel pausiert, werden jetzt auch die Soundeffekte gestoppt

## Alpha 003

* Intro
* Puzzle mit Zahlencode hinzugefügt
* Hunde KI verbessert
* Dekoration hinzugefügt

## Alpha 002

* Puzzle mit Holzbrettern hinzugefügt
* Mehr Musik-Tracks
* Spielstände jetzt aufwärtskompatibel
* Experimentelle Maussteuerung
* Video-Einstellungen: Auflösungen kleiner als 640x480 entfernt
* Unterstützung für High DPI

## Alpha 001

* Erster öffentlicher Alpha Build